--- a/config.template.json
+++ b/config.template.json
@@ -7,5 +7,8 @@
     "url": "mongodb://127.0.0.1:27017/currencyExchangeRates",
     "reconnectTries": 5,
     "reconnectInterval": 5
+  },
+  "EXCHANGE_RATES": {
+    "TTL": 24
   }
 }
